force-app/main/default/objects/Matter_Payment__c/Matter_Payment__c.object-meta.xml
<CustomObject>
    <description>Payment, reimbursement, adjustment, or review row related to a Matter.</description>
    <label>Matter Payment</label>
    <nameField>
        <displayFormat>PAY-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>