force-app/main/default/objects/Matter_Payment__c/fields/Demo_Note__c.field-meta.xml
<CustomField>
    <fullName>Demo_Note__c</fullName>
    <label>Demo Note</label>
    <type>TextArea</type>
</CustomField>