force-app/main/default/objects/Matter_Payment__c/fields/HLS_Code__c.field-meta.xml
<CustomField>
    <fullName>HLS_Code__c</fullName>
    <label>HLS Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verify Pay</fullName>
            </value>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Non-billable</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>