force-app/main/default/objects/Matter_Payment__c/fields/Imported_Date__c.field-meta.xml
<CustomField>
    <fullName>Imported_Date__c</fullName>
    <label>Imported Date</label>
    <type>Date</type>
</CustomField>