force-app/main/default/objects/Matter_Payment__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>Matter Payments</relationshipLabel>
    <relationshipName>Matter_Payments</relationshipName>
    <type>MasterDetail</type>
</CustomField>