force-app/main/default/objects/Matter_Payment__c/fields/Matter_Payer__c.field-meta.xml
<CustomField>
    <fullName>Matter_Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter Payer</label>
    <referenceTo>Matter_Payer__c</referenceTo>
    <relationshipLabel>Matter Payments</relationshipLabel>
    <relationshipName>Matter_Payer_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>