force-app/main/default/objects/Matter_Payment__c/fields/Non_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Amount__c</fullName>
    <label>Non-Billable Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>