force-app/main/default/objects/Matter_Payment__c/fields/Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Name__c</fullName>
    <formula>Matter_Payer__r.Payer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Payer Name</label>
    <type>Text</type>
</CustomField>