force-app/main/default/objects/Matter_Payment__c/fields/Payer_Role__c.field-meta.xml
<CustomField>
    <fullName>Payer_Role__c</fullName>
    <formula>TEXT(Matter_Payer__r.Payer_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Payer Role</label>
    <type>Text</type>
</CustomField>