force-app/main/default/objects/Matter_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Patient Responsibility</fullName>
            </value>
            <value>
                <fullName>Small Balance Correction</fullName>
            </value>
            <value>
                <fullName>Recoupment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>