force-app/main/default/objects/Matter_Payment__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payer Portal</fullName>
            </value>
            <value>
                <fullName>Client System</fullName>
            </value>
            <value>
                <fullName>Manual Demo Import</fullName>
            </value>
            <value>
                <fullName>RPA Handoff</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>