force-app/main/default/objects/Matter_Payment__c/fields/Verify_Pay__c.field-meta.xml
<CustomField>
    <fullName>Verify_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Pay</label>
    <type>Checkbox</type>
</CustomField>